[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/empty.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/ui/image_button/game_buttons.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/image_button/GameButton.gd" type="Script" id=3]

[node name="GameButton" type="Button"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
enabled_focus_mode = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
